Takes text input to change display data

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Weather App</title>
 </head>
 <body>
-    <button type="button" id="getWeather">Get Weather</button>
+    <input type="text" id="cityInput" name="cityInput"><br><br>
+    <button type="button" id="searchBtn">Search</button>
     <p>Temp: <span id="displayTemp"></span> °F</p>
     <p>Humidity: <span id="displayHumid"></span> %</p>
     <p>UV Index: <span id="displayUV"></span></p>
