Display name of city and date

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <input type="text" id="cityInput" name="cityInput"><br><br>
     <button type="button" id="searchBtn">Search</button>
+    <p><span id="nameDate"></span></p>
     <p>Temp: <span id="displayTemp"></span> °F</p>
     <p>Humidity: <span id="displayHumid"></span> %</p>
     <p>UV Index: <span id="displayUV"></span></p>
