Now shows imperial units for temp

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <p>Humidity: <span id="displayHumid"></span> %</p>
     <p>UV Index: <span id="displayUV"></span></p>
     <p>Wind: <span id="displayWind"></span> MPH</p>
+
+    <ul id="forecastList">
+        
+    </ul>
 <script src="./Assets/js/script.js"></script>
 </body>
 </html>
