--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
   <title>Weather App</title>
 </head>
 <body>
+    <!-- Search form -->
     <input type="text" id="cityInput" name="cityInput"><br><br>
     <button type="button" id="searchBtn">Search</button>
+
+    <!-- History List -->
+    <hr>
+    <ul id="historyList"></ul>
+
+    <!-- Current Day Forecast-->
     <p><span id="nameDate"></span></p>
     <p>Temp: <span id="displayTemp"></span> °F</p>
     <p>Humidity: <span id="displayHumid"></span> %</p>
     <p>UV Index: <span id="displayUV"></span></p>
     <p>Wind: <span id="displayWind"></span> MPH</p>
 
+    <!-- 5 Day Forecast-->
     <ul id="forecastList">
     </ul>
 <script src="./Assets/js/script.js"></script>
