--- a/index.html
+++ b/index.html
@@ -3,26 +3,52 @@
 <head>
   <meta charset="utf-8">
   <title>Weather App</title>
+  <link href="Assets/css/style.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <!-- Search form -->
-    <input type="text" id="cityInput" name="cityInput"><br><br>
-    <button type="button" id="searchBtn">Search</button>
+    <h1 class="display-1 text-center fw-bold ">Weather Dashboard</h1>
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-3">
+                <!-- Search form -->
+                <div class="input-group mb-3">
+                    <input type="text" id="cityInput" class="form-control" placeholder="City Name" name="cityInput" aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary" id="searchBtn" type="button">Search</button>
+                </div>
 
-    <!-- History List -->
-    <hr>
-    <ul id="historyList"></ul>
+                <!-- History List -->
+                <hr>
+                <ul id="historyList" class="list-group text-center"></ul>
+          </div>
+          <div class="col-sm-9">
+            <div class="row">
 
-    <!-- Current Day Forecast-->
-    <p><span id="nameDate"></span></p>
-    <p>Temp: <span id="displayTemp"></span> °F</p>
-    <p>Humidity: <span id="displayHumid"></span> %</p>
-    <p>UV Index: <span id="displayUV"></span></p>
-    <p>Wind: <span id="displayWind"></span> MPH</p>
+            <!-- Current Day Forecast-->
+              <div id="currentDay" class="col-8 col-sm-12">
+                    <h2>Current Day Forecast</h2>
+                    <h3><span id="nameDate"></span></h3>
+                    <p>Temp: <span id="displayTemp"></span> °F</p>
+                    <p>Humidity: <span id="displayHumid"></span> %</p>
+                    <p>UV Index: <span id="displayUV"></span></p>
+                    <p>Wind: <span id="displayWind"></span> MPH</p>
+              </div>
+            </div>
 
-    <!-- 5 Day Forecast-->
-    <ul id="forecastList">
-    </ul>
+            <!-- Five Day Forecast-->
+            <div id="fiveForecast" class="row">
+                <div class="col-8 col-sm-12">
+                    <h2>5-Day Forecast</h2>
+                    <ul id="forecastList" class="list-group list-group-horizontal">
+                    </ul>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+<!-- Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="./Assets/js/script.js"></script>
 </body>
 </html>
