--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+    <!-- Title -->
     <h1 class="display-1 text-center fw-bold ">Weather Dashboard</h1>
+    
     <div class="container">
         <div class="row">
           <div class="col-sm-3">
